--- a/test/basic.html
+++ b/test/basic.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <link rel="import" href="../../polymer/polymer.html">
   <link rel="import" href="../../paper-checkbox/paper-checkbox.html">
-  <link rel="import" href="../../paper-input/paper-input.html">
+  <link rel="import" href="../../iron-input/iron-input.html">
   <link rel="import" href="../../paper-button/paper-button.html">
   <link rel="import" href="../iron-form.html">
 
@@ -29,9 +29,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div>
         <iron-form id="native-checkboxes">
           <form action="/get" method="get">
-            <input type="checkbox" name="check1" checked> <!-- default value is "on" -->
-            <input type="checkbox" name="check1" value="1">
-            <input type="checkbox" name="check1" value="2" checked>
+            <input type="checkbox" name="check1[]" checked> <!-- default value is "on" -->
+            <input type="checkbox" name="check1[]" value="1">
+            <input type="checkbox" name="check1[]" value="2" checked>
             <input type="checkbox" name="check2" value="3" checked>
             <input type="checkbox" name="check3" value="4">
           </form>
@@ -91,12 +91,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </iron-form>
         <iron-form id="custom-inputs">
           <form action="/get" method="get">
-            <paper-input name="input1"></paper-input>
-            <paper-input name="input1" value="foo"></paper-input>
-            <paper-input name="input1" value="zag"></paper-input>
-            <paper-input name="input2" value="bar"></paper-input>
-            <paper-input type="password" name="pass1" value="pass"></paper-input>
-            <paper-input type="number" name="number1" value="35"></paper-input>
+            <iron-input><input name="input1[]" /></iron-input>
+            <iron-input bind-value="foo"><input name="input1[]" /></iron-input>
+            <iron-input bind-value="zag"><input name="input1[]" /></iron-input>
+            <iron-input bind-value="bar"><input name="input2" /></iron-input>
+            <iron-input bind-value="pass"><input type="password" name="pass1" /></iron-input>
+            <iron-input bind-value="35"><input type="number" name="number1" /></iron-input>
           </form>
         </iron-form>
       </div>
@@ -120,13 +120,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <iron-form id="custom-required">
           <form action="/get" method="get">
-            <paper-input required></paper-input>
+            <iron-input required></iron-input>
           </form>
         </iron-form>
 
         <iron-form id="custom-invalid">
           <form action="/get" method="get">
-            <paper-input pattern="aa" value="b"></paper-input>
+            <iron-input pattern="aa" bind-value="b"></iron-input>
           </form>
         </iron-form>
       </div>
@@ -158,8 +158,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <input type="radio" name="radio2">
           <paper-checkbox name="papercheck1" checked></paper-checkbox>
           <paper-checkbox name="papercheck2"></paper-checkbox>
-          <paper-input name="paper1" value="paper1"></paper-input>
-          <paper-input name="paper2" value=""></paper-input>
+          <iron-input name="paper1" bind-value="paper1"></iron-input>
+          <iron-input name="paper2" bind-value=""></iron-input>
           <input type="reset">
         </form>
       </iron-form>
@@ -193,7 +193,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       test('serializes native checkboxes', function(done) {
         var form = f.querySelector('#native-checkboxes');
         form.addEventListener('iron-form-response', function(event) {
-          expect(event.detail.url).to.equal('/get?check1=on&check1=2&check2=3');
+          var expectedUrl = encodeURI('/get?check1[]=on&check1[]=2&check2=3');
+          expect(event.detail.url).to.equal(expectedUrl);
           expect(event.detail.response.success).to.be.equal(true);
           done();
         });
@@ -208,7 +209,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       test('serializes native radio buttons', function(done) {
         var form = f.querySelector('#native-radios');
         form.addEventListener('iron-form-response', function(event) {
-          expect(event.detail.url).to.equal('/get?radio1=on&radio2=3');
+          var expectedUrl = encodeURI('/get?radio1=on&radio2=3');
+          expect(event.detail.url).to.equal(expectedUrl);
           expect(event.detail.response.success).to.be.equal(true);
           done();
         });
@@ -302,7 +304,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         var form = f.querySelector('#custom-inputs');
         form.addEventListener('iron-form-response', function(event) {
           // TODO(noms): figure out if we should submit empty text.
-          expect(event.detail.url).to.equal('/get?input1=foo&input1=zag&input2=bar&pass1=pass&number1=35');
+          var expected = '/get?input1[]=foo&input1[]=zag&input2=bar&pass1=pass&number1=35';
+          expect(event.detail.url).to.equal(encodeURI(expected));
           expect(event.detail.response.success).to.be.equal(true);
           done();
         });
@@ -381,7 +384,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },  200);
       });
 
-      test('<paper-input required> is validated and does not submit the form', function(done) {
+      test('<iron-input required> is validated and does not submit the form', function(done) {
         var form = f.querySelector('#custom-required');
 
         var responses = 0;
@@ -403,7 +406,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },  200);
       });
 
-      test('invalid <paper-input> but not required is validated and does not submit the form', function(done) {
+      test('invalid <iron-input> but not required is validated and does not submit the form', function(done) {
         var form = f.querySelector('#custom-invalid');
 
         var responses = 0;
