--- a/test/basic.html
+++ b/test/basic.html
@@ -158,8 +158,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <input type="radio" name="radio2">
           <paper-checkbox name="papercheck1" checked></paper-checkbox>
           <paper-checkbox name="papercheck2"></paper-checkbox>
-          <iron-input name="paper1" bind-value="paper1"></iron-input>
-          <iron-input name="paper2" bind-value=""></iron-input>
+          <iron-input bind-value="paper1"><input name="paper1" /></iron-input>
+          <iron-input bind-value=""><input name="paper2" /></iron-input>
           <input type="reset">
         </form>
       </iron-form>
@@ -538,6 +538,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var updated = form.serializeForm();
           expect(JSON.stringify(updated)).to.not.be.equal(initial);
 
+          debugger;
           form.reset();
 
           var final = form.serializeForm();
