--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script>
       WCT.loadSuites([
         'basic.html',
-        'basic.html?dom=shadow'
+        'basic.html?dom=shadow',
+        'slotted.html',
+        'slotted.html?dom=shadow'
       ]);
     </script>
 
