--- a/test/basic.html
+++ b/test/basic.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <link rel="import" href="../../polymer/polymer.html">
   <link rel="import" href="../../paper-checkbox/paper-checkbox.html">
-  <link rel="import" href="../../iron-input/iron-input.html">
+  <link rel="import" href="../../paper-input/paper-input.html">
   <link rel="import" href="../../paper-button/paper-button.html">
   <link rel="import" href="../iron-form.html">
 
@@ -27,77 +27,61 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <test-fixture id="serialization">
     <template>
       <div>
-        <iron-form id="native-checkboxes">
-          <form action="/get" method="get">
-            <input type="checkbox" name="check1[]" checked> <!-- default value is "on" -->
-            <input type="checkbox" name="check1[]" value="1">
-            <input type="checkbox" name="check1[]" value="2" checked>
-            <input type="checkbox" name="check2" value="3" checked>
-            <input type="checkbox" name="check3" value="4">
-          </form>
+        <iron-form id="native-checkboxes" url="/get" method="get">
+          <input type="checkbox" name="check1[]" checked> <!-- default value is "on" -->
+          <input type="checkbox" name="check1[]" value="1">
+          <input type="checkbox" name="check1[]" value="2" checked>
+          <input type="checkbox" name="check2" value="3" checked>
+          <input type="checkbox" name="check3" value="4">
         </iron-form>
-        <iron-form id="native-radios">
-          <form action="/get" method="get">
-            <input type="radio" name="radio1" checked> <!-- default value is "on" -->
-            <input type="radio" name="radio1" value="1">
-            <input type="radio" name="radio2" value="2" checked>
-            <input type="radio" name="radio2" value="3" checked> <!-- it's a radio group -->
-            <input type="radio" name="radio3" value="4">
-          </form>
+        <iron-form id="native-radios" url="/get" method="get">
+          <input type="radio" name="radio1" checked> <!-- default value is "on" -->
+          <input type="radio" name="radio1" value="1">
+          <input type="radio" name="radio2" value="2" checked>
+          <input type="radio" name="radio2" value="3" checked> <!-- it's a radio group -->
+          <input type="radio" name="radio3" value="4">
         </iron-form>
-        <iron-form id="native-buttons">
-          <form action="/get" method="get">
-            <input type="reset" name="reset1" value="reset"></input>
-            <input type="submit" name="submit1" value="submit"></input>
-            <button name="button1" value="button">text</button>
-          </form>
+        <iron-form id="native-buttons" url="/get" method="get">
+          <input type="reset" name="reset1" value="reset"></input>
+          <input type="submit" name="submit1" value="submit"></input>
+          <button name="button1" value="button">text</button>
         </iron-form>
-        <iron-form id="native-selects">
-          <form action="/get" method="get">
-            <select name="select1" multiple>
-              <option value="1" selected>A</option>
-              <option value="2" selected>B</option>
-              <option value="3">C</option>
-            </select>
-            <select name="select2">
-              <option value="1" selected>A</option>
-              <option value="2">B</option>
-            </select>
-          </form>
+        <iron-form id="native-selects" url="/get" method="get">
+          <select name="select1" multiple>
+            <option value="1" selected>A</option>
+            <option value="2" selected>B</option>
+            <option value="3">C</option>
+          </select>
+          <select name="select2">
+            <option value="1" selected>A</option>
+            <option value="2">B</option>
+          </select>
         </iron-form>
-        <iron-form id="native-inputs">
-          <form action="/get" method="get">
-            <input type="text" name="input1">
-            <input type="text" name="input1" value="foo">
-            <input type="text" name="input1" value="zag">
-            <input type="text" name="input2" value="bar">
-            <input type="password" name="pass1" value="pass">
-            <input type="number" name="number1" value="35">
-          </form>
+        <iron-form id="native-inputs" url="/get" method="get">
+          <input type="text" name="input1">
+          <input type="text" name="input1" value="foo">
+          <input type="text" name="input1" value="zag">
+          <input type="text" name="input2" value="bar">
+          <input type="password" name="pass1" value="pass">
+          <input type="number" name="number1" value="35">
         </iron-form>
-        <iron-form id="native-inputs-empty">
-          <form action="/get" method="get">
-            <input type="text" name="input1">
-          </form>
+        <iron-form id="native-inputs-empty" url="/get" method="get">
+          <input type="text" name="input1">
         </iron-form>
-        <iron-form id="custom-checkboxes">
-          <form action="/get" method="get">
-            <paper-checkbox name="check1" checked></paper-checkbox> <!-- default value is "on" -->
-            <paper-checkbox name="check1" value="1"></paper-checkbox>
-            <paper-checkbox name="check1" value="2" checked></paper-checkbox>
-            <paper-checkbox name="check2" value="3" checked></paper-checkbox>
-            <paper-checkbox name="check3" value="4"></paper-checkbox>
-          </form>
+        <iron-form id="custom-checkboxes" url="/get" method="get">
+          <paper-checkbox name="check1" checked></paper-checkbox> <!-- default value is "on" -->
+          <paper-checkbox name="check1" value="1"></paper-checkbox>
+          <paper-checkbox name="check1" value="2" checked></paper-checkbox>
+          <paper-checkbox name="check2" value="3" checked></paper-checkbox>
+          <paper-checkbox name="check3" value="4"></paper-checkbox>
         </iron-form>
-        <iron-form id="custom-inputs">
-          <form action="/get" method="get">
-            <iron-input><input name="input1[]" /></iron-input>
-            <iron-input bind-value="foo"><input name="input1[]" /></iron-input>
-            <iron-input bind-value="zag"><input name="input1[]" /></iron-input>
-            <iron-input bind-value="bar"><input name="input2" /></iron-input>
-            <iron-input bind-value="pass"><input type="password" name="pass1" /></iron-input>
-            <iron-input bind-value="35"><input type="number" name="number1" /></iron-input>
-          </form>
+        <iron-form id="custom-inputs" url="/get" method="get">
+          <paper-input name="input1[]"></paper-input>
+          <paper-input value="foo" name="input1[]"></paper-input>
+          <paper-input value="zag" name="input1[]"></paper-input>
+          <paper-input value="bar" name="input2"></paper-input>
+          <paper-input value="pass" type="password" name="pass1"></paper-input>
+          <paper-input value="35" type="number" name="number1"></paper-input>
         </iron-form>
       </div>
     </template>
@@ -106,34 +90,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <test-fixture id="validation">
     <template>
       <div>
-        <iron-form id="native-required">
-          <form action="/get" method="get">
-            <input required>
-          </form>
+        <iron-form id="native-required" url="/get" method="get">
+          <input required>
         </iron-form>
 
-        <iron-form id="required-novalidate" novalidate>
-          <form action="/get" method="get">
-            <input required>
-          </form>
+        <iron-form id="required-novalidate" novalidate url="/get" method="get">
+          <input required>
         </iron-form>
 
-        <iron-form id="native-invalid">
-          <form action="/get" method="get">
-            <input pattern="aa" value="b">
-          </form>
+        <iron-form id="native-invalid" url="/get" method="get">
+          <input pattern="aa" value="b">
         </iron-form>
 
-        <iron-form id="custom-required">
-          <form action="/get" method="get">
-            <iron-input><input required /></iron-input>
-          </form>
+        <iron-form id="custom-required" url="/get" method="get">
+          <paper-input required></paper-input>
         </iron-form>
 
-        <iron-form id="custom-invalid">
-          <form action="/get" method="get">
-            <iron-input bind-value="b"><input pattern="aa" /></iron-input>
-          </form>
+        <iron-form id="custom-invalid" url="/get" method="get">
+          <paper-input value="b" pattern="aa"></paper-input>
         </iron-form>
       </div>
     </template>
@@ -141,33 +115,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <test-fixture id="submission">
     <template>
-      <iron-form>
-        <form action="/get" method="get">
+      <iron-form url="/get" method="get">
+        <div>
           <input type="checkbox" name="check1" checked>
           <input type="submit">
           <input type="button">
           <paper-button></paper-button>
-        </form>
+        </div>
       </iron-form>
     </template>
   </test-fixture>
 
   <test-fixture id="resetting">
     <template>
-      <iron-form>
-        <form action="/get" method="get">
-          <input type="input" name="input1" value="input1">
-          <input type="input" name="input2">
-          <input type="checkbox" name="check1" checked>
-          <input type="checkbox" name="check2">
-          <input type="radio" name="radio1" checked>
-          <input type="radio" name="radio2">
-          <paper-checkbox name="papercheck1" checked></paper-checkbox>
-          <paper-checkbox name="papercheck2"></paper-checkbox>
-          <iron-input bind-value="paper1"><input name="paper1" /></iron-input>
-          <iron-input bind-value=""><input name="paper2" /></iron-input>
-          <input type="reset">
-        </form>
+      <iron-form url="/get" method="get">
+        <input type="input" name="input1" value="input1">
+        <input type="input" name="input2">
+        <input type="checkbox" name="check1" checked>
+        <input type="checkbox" name="check2">
+        <input type="radio" name="radio1" checked>
+        <input type="radio" name="radio2">
+        <paper-checkbox name="papercheck1" checked></paper-checkbox>
+        <paper-checkbox name="papercheck2"></paper-checkbox>
+        <paper-input value="paper1" name="paper1"></paper-input>
+        <paper-input value="" name="paper2"></paper-input>
+        <input type="reset">
       </iron-form>
     </template>
   </test-fixture>
@@ -406,7 +378,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },  200);
       });
 
-      test('<iron-input required> is validated and does not submit the form', function(done) {
+      test('<paper-input required> is validated and does not submit the form', function(done) {
         var form = f.querySelector('#custom-required');
 
         var responses = 0;
@@ -416,7 +388,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Wait one tick for observeNodes.
         Polymer.Base.async(function() {
-          form.validate();
           expect(form.validate()).to.be.equal(false);
           form.submit();
           server.respond();
@@ -428,7 +399,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },  200);
       });
 
-      test('invalid <iron-input> but not required is validated and does not submit the form', function(done) {
+      test('invalid <paper-input> but not required is validated and does not submit the form', function(done) {
         var form = f.querySelector('#custom-invalid');
 
         var responses = 0;
@@ -515,7 +486,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Wait one tick for observeNodes.
         Polymer.Base.async(function() {
-          form._form.querySelector('input[type=submit]').click();
+          form.$.slot.assignedNodes()
+            .find((n) => n.nodeType === Node.ELEMENT_NODE)
+            .querySelector('input[type=submit]').click();
           server.respond();
         }, 1);
       });
@@ -528,7 +501,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Wait one tick for observeNodes.
         Polymer.Base.async(function() {
-          var button = form._form.querySelector('input[type=button]');
+          var button = form.$.slot.assignedNodes()
+            .find((n) => n.nodeType === Node.ELEMENT_NODE)
+            .querySelector('input[type=button]');
           button.addEventListener('click', function() {
             form.submit();
           });
@@ -546,7 +521,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Wait one tick for observeNodes.
         Polymer.Base.async(function() {
-          var button = form._form.querySelector('paper-button');
+          var button = form.$.slot.assignedNodes()
+            .find((n) => n.nodeType === Node.ELEMENT_NODE)
+            .querySelector('paper-button');
           button.addEventListener('click', function() {
             form.submit();
           });
@@ -612,15 +589,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       test('submits a form', function(done) {
         var form = document.createElement('iron-form');
-        var nativeForm = document.createElement('form');
-        nativeForm.action = '/get';
-        nativeForm.method = 'get';
+        form.url = '/get';
+        form.method = 'get';
 
         var input = document.createElement('input');
-        nativeForm.appendChild(input);
+        form.appendChild(input);
         input.required = true;
         input.name = 'foo';
-        form.appendChild(nativeForm);
 
         // Need to add to the document so observeNodes runs.
         document.body.appendChild(form);
